updated styles so input boxes don't overflow, added comparison ability to flooring, comparison max 3 options resets everytime screen renders - fixed bug on carpet tab where if you left you'd get stuck unable to clear comparisons or do another calculation

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,7 @@ nav {
     font-size: 1rem;
     transition: border-color 0.3s;
     background-color: #fff;
+    box-sizing: border-box;
 }
 
 .input-group input:focus,
